--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,4 @@
 remote_theme: riggraz/no-style-please
+
+title: Paul Labonne
+description: I am a PhD student in economics at king's College London and ESCoE.
