--- a/_config.yml
+++ b/_config.yml
@@ -2,8 +2,8 @@ remote_theme: riggraz/no-style-please
 
 title: Paul Labonne
 
----
----
-body {
-  font-family: '{{ site.fonts.primary }}',{{ site.fonts.secondary }},Arial,sans-serif;
-}
+fonts:
+
+ primary: Roboto Slab
+
+ secondary: Helvetica
